--- a/style.css
+++ b/style.css
@@ -75,11 +75,11 @@ main {
   color: #f65282;
 }
 
-.icon {
-
-  height: 88px;
-  width: 88px;
- 
+.current-temperature-icon {
+  position: relative;
+  top: -8px;
+  font-size: 40px;
+  margin-right: 10px;
 }
 
 .current-temperature-value {
