--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
 body {
   background: #eae4f8;
   font-family: "Roboto", sans-serif;
+  background-image:url ( 'https://w0.peakpx.com/wallpaper/583/242/HD-wallpaper-purple-sky-dark-moon-nature-night-thumbnail.jpg');
 }
 
 a {
   color: #7d5df1;
 }
-.image{
-  width: 100%;
-  opacity: .5;
-  
-}
+
 
 .weather-app {
   background: white;
