--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background: #eae4f8;
   font-family: "Roboto", sans-serif;
-  background-image:url ( 'https://w0.peakpx.com/wallpaper/583/242/HD-wallpaper-purple-sky-dark-moon-nature-night-thumbnail.jpg');
+  background-image:url ( 'purplesky.jpg');
 }
 
 a {
