--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background: #eae4f8;
   font-family: "Roboto", sans-serif;
-  background-image: url ( 'bluesky.jpg');
+  background-image: url ( 'https://i.pinimg.com/736x/cb/db/64/cbdb645c144d09ea5543d03d3e1edfc6.jpg');
   background-size: cover;
   background-attachment: fixed;
 }
