--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f9f7fe;
+  background-color: #eae4f8;
   font-family: "Roboto", sans-serif;
 }
 
@@ -8,7 +8,7 @@ a {
 }
 
 .weather-app {
-  background: white;
+  background: rgb(186, 180, 238);
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -31,7 +31,7 @@ header {
 }
 
 .search-form-button {
-  background: #885df1;
+  background: #6c17b1e5;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
@@ -63,7 +63,7 @@ main {
 }
 
 .weather-app-details strong {
-  color: #f65282;
+  color: #f51e5e;
 }
 
 .weather-app-temperature-container {
