--- a/style.css
+++ b/style.css
@@ -99,8 +99,9 @@ main {
 
 }
 .weather-forecast-icon{
-  font-size: 38px;
+  width: 24px;
   text-align: center;
+
 
 }
 .weather-forecast-temperatures{
