--- a/style.css
+++ b/style.css
@@ -99,8 +99,12 @@ main {
 
 }
 .weather-forecast-icon{
-  width: 24px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
+
+
 
 
 }
