--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
 }
 
 a {
-  color: #885df1;
+  color: #7d5df1;
 }
 
 .weather-app {
-  background: white;
+  background: rgb(179, 172, 238);
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -31,7 +31,7 @@ header {
 }
 
 .search-form-button {
-  background: #885df1;
+  background: #6c17b1e5;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
